--- a/app.json
+++ b/app.json
@@ -10,8 +10,9 @@
 		"nl": "Haalt video URLs voor videostreams op"
     },
     "category": "internet",
-    "version": "0.3.0",
+    "version": "0.3.1",
     "compatibility": ">=1.5.0",
+	"athomForumDiscussionId": 4187,
     "author": {
         "name": "Bas van den Bosch",
         "email": "bvdbos@gmail.com"
